...
    <string name="common_enabled">已开启</string>
    <string name="common_disabled">已关闭</string>
    <string name="common_expanded">已展开</string>
    <string name="common_collapsed">已收起</string>
    <string name="common_expand">展开</string>
    <string name="common_collapse">收起</string>
    <string name="common_more">更多</string>
    <string name="common_rename_session">重命名会话</string>
    <string name="connection_open_in_browser">在浏览器中打开</string>
    <string name="connection_copy_address">复制地址</string>
    <string name="connection_local_info">两个地址都能打开。第二行是好记的局域网名称，电脑浏览器可直接输入；安卓手机识别不了这类名字，请扫码或输入第一行的 IP 地址。</string>
    <string name="connection_local_probing">正在确认名称…</string>
    <string name="connection_local_renamed">%1$s 已被占用，本次使用 %2$s</string>
...
